# agent-token-analyzer

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.claude/skills/modern-python/: SKILL.md
oasf/: token-analysis-agent.json
src/agent/: __init__.py  agent.py  llm_config.py  tools.py
src/server/: __init__.py  agent_executor.py  card.py  event_converter.py  server.py
src/token_analysis/: __init__.py  __main__.py  analyzer.py  cli.py  client.py  context.py  context_window.py  cost.py  models.py  queries.py  report.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_client.py  test_context.py  test_context_window.py  test_cost.py  test_e2e.py  test_models.py  test_report.py
